--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-request-id": "^1.4.1",
+    "joi": "^17.3.0",
+    "morgan": "^1.10.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "pm2": "^4.5.0",
+    "sequelize": "^6.3.5",
+    "winston": "2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
