--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=development node -r esm .",
-    "dev": "nodemon -r esm ./src"
+    "dev": "nodemon -r esm ./src",
+    "pm2": "pm2 start ./src/config/pm2.config.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
