--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-request-id": "^1.4.1",
     "joi": "^17.3.0",
     "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "pm2": "^4.5.0",
