--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,31 @@
-version: "1"
+# Depends_on Control Services Startup Order
+version: "2"
 
 services:
   node:
+    build:
+      context: .
+      dockerfile: ./docker/node.${APP_ENV}.dockerfile
+    ports:
+      - "4000:4000"
+    depends_on:
+      - "postgres"
+    networks:
+      - node-boilerplate-network
+
+  postgres:
+    image: "postgres"
+    env_file:
+      - ./docker/env/postgres.${APP_ENV}.env
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - node-boilerplate-network
+
+volumes:
+  pgdata:
 
 networks:
   node-boilerplate-network:
