--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-hstore": "^2.3.3",
     "pm2": "^4.5.0",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^5.4.0",
     "winston": "2.4.2"
   },
   "devDependencies": {
