--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,21 @@
 # Depends_on Control Services Startup Order
+# Don't Forget Set Environment Variables Before Run This yml file
+# APP_END=development || production
 version: "2"
 
 services:
   node:
+    container_name: nodejs-boilerplate
     build:
       context: .
       dockerfile: ./docker/node.${APP_ENV}.dockerfile
     ports:
       - "4000:4000"
+    volumes:
+      - .:/var/www/boilerplate
+    working_dir: /var/www/boilerplate
+    env_file:
+      - ./docker/env/app.${APP_ENV}.env
     depends_on:
       - "postgres"
     networks:
