--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 # Depends_on Control Services Startup Order
 # Don't Forget Set Environment Variables Before Run This yml file
-# APP_END=development || production
+# APP_ENV=development || production
 version: "2"
 
 services:
@@ -25,6 +25,7 @@ services:
     image: "postgres"
     env_file:
       - ./docker/env/postgres.${APP_ENV}.env
+      - ./docker/env/app.${APP_ENV}.env
     ports:
       - "5432:5432"
     volumes:
