--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 # Depends_on Control Services Startup Order
 # Don't Forget Set Environment Variables Before Run This yml file
 # APP_ENV=development || production
+# windows >> set APP_ENV=development
 version: "3"
 
 services:
