Works With K8S Migration From Compose To Kubernetes And Added Quick Start At README

--- a/k8s/node-deployment.yaml
+++ b/k8s/node-deployment.yaml
@@ -27,19 +27,21 @@ spec:
         io.kompose.service: node
     spec:
       containers:
-      - env:
-        - name: NODE_ENV
-          valueFrom:
-            configMapKeyRef:
-              key: NODE_ENV
-              name: docker-env-app-development-env
-        image: node
-        imagePullPolicy: ""
-        name: nodejs-boilerplate
-        ports:
-        - containerPort: 4000
-        resources: {}
-        workingDir: /var/www/boilerplate
+        - env:
+            - name: NODE_ENV
+              valueFrom:
+                configMapKeyRef:
+                  key: NODE_ENV
+                  name: docker-env-app-development-env
+          image: node
+          imagePullPolicy: ""
+          command: ["/bin/sh"]
+          args: ["-c", "while true; do echo Done Deploying sv-premier; sleep 3600;done"]
+          name: nodejs-boilerplate
+          ports:
+            - containerPort: 4000
+          resources: {}
+          workingDir: /var/www/boilerplate
       restartPolicy: Always
       serviceAccountName: ""
       volumes: null
