--- a/docker/config/nginx.production.conf
+++ b/docker/config/nginx.production.conf
@@ -25,7 +25,7 @@ http {
         upstream node-upstream {
               least_conn;
               
-              server node:8080 weight=10 max_fails=3 fail_timeout=30s;
+              server node:4000 weight=10 max_fails=3 fail_timeout=30s;
               # server node2:8080 weight=10 max_fails=3 fail_timeout=30s;
               # server node3:8080 weight=10 max_fails=3 fail_timeout=30s;
               
@@ -41,8 +41,31 @@ http {
               #Docker Toolbox server name
               #server_name 192.168.99.100;
 
-              #server_name boilerplate.com www.boilerplate.com;
               
+              root /var/www/public;
+
+              # Handle static files
+              
+              location /app/ {
+                access_log off;
+                expires 1d;
+              }
+              
+              location /css/ {
+                access_log off;
+                expires 1d;
+              }
+              
+              location /img/ {
+                access_log off;
+                expires 1d;
+              }
+              
+              location /js/ {
+                access_log off;
+                expires 1d;
+              }
+                           
               location / {
                   proxy_pass            http://node-upstream;
                   proxy_http_version    1.1;
